--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,19 +3,25 @@
   max-height: calc(100vh - 40px);
 }
 
-#home::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 10px;
 }
 
-#home::-webkit-scrollbar-track {
-  background: #f1f1f1;
+::-webkit-scrollbar-track {
+  background: #ffffff00;
 }
 
-#home::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background: #888;
+::-webkit-scrollbar-thumb {
+  background-color: var(--pc);
+  border-radius: 20px;
+  box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
+  border: 6px solid transparent;
 }
 
-#home::-webkit-scrollbar-thumb:hover {
-  background: #555;
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--sc);
+}
+
+.dot {
+  color: var(--sc);
 }
