--- a/src/components/Home/Presentation.css
+++ b/src/components/Home/Presentation.css
@@ -3,3 +3,16 @@
   min-width: 100%;
   min-height: calc(100vh - 40px);
 }
+
+.heading-primary {
+  color: var(--pc);
+  @apply text-7xl font-thin;
+}
+
+.heading-primary span {
+  @apply font-bold;
+}
+
+.presentation__p {
+  @apply text-3xl text-center;
+}
